--- a/wine/src/main/res/layout/line_wine.xml
+++ b/wine/src/main/res/layout/line_wine.xml
@@ -9,6 +9,8 @@
             type="com.example.wine.Wine" />
     </data>
 
+    
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -40,7 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:text="@{wine.sort}"
+            android:text="@{wine.type.name()}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
